fix vanishing list on firefox

--- a/ui/app/components/ui/tabs/index.scss
+++ b/ui/app/components/ui/tabs/index.scss
@@ -7,7 +7,6 @@
     border-bottom: 1px solid $geyser;
     background-color: $white;
 
-    position: sticky;
     top: 0;
     z-index: 1;
   }
